<package>
  <name>imu_odometer</name>
  <version>0.0.1</version>
  <description>
    This package provides an IMU data integrator to be used with IMU's that do 
    no provide orientation and/or linear velocity measurments.
    
    The imu_odom_node just integrates the angular velocity to obtain the current
    orientation, and the linear acceleration to get the current linear velocity.
    Received and integrated data are gathered and published in a 
    nav_msgs/Odometry message.
    
    The integration process is initialized when the first imu message arrives.
    The angular and linear velocity speed is assumed to be null.
    The orientation is computed comparing the receviced acceleration 
    with the standard gravity. Hence, pitch and roll are referenced 
    with regard to the earth, while yaw is set to zero.
  </description>
  <author>Joan Pau Beltran</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/srv/imu_odometer</url>
  <url type="bugtracker">https://github.com/srv/imu_odometer/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>